2008-03-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseAlbumInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseArtistInfo.cs:
	Fix issue with importing items that have null artist or album names.
	Fixes BGO #524600.

2008-03-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.PlaybackController/PlaybackControllerService.cs:
	The First () method is used to start playback when a source, artist, or album
	is activated, and represents a break from the previous playback.  It should
	not raise the Transition event.  Fixes BGO #524556.

2008-03-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/AlbumListView.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ArtistListView.cs:
	When an artist or album is activated, make sure we switch playback to the
	active source before playing the first song in the playback source.  Fixes
	BGO #524609.

2008-03-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/NowPlayingSource.cs:
	Pulse the Now Playing source when a song or video starts playing and it's
	not the active source.

2008-03-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* data/mimetypes.txt: List of mimetypes, one per line, combining what we
	already had with Totem's list.

	* data/mimetypes.pl: Perl script that sorts and removes duplicates from
	mimetypes.txt, and prints out a ; separated list suitable for the .desktop
	file.

	* data/banshee-1.desktop.in.in: Use the output from mimetypes.pl, and
	change the name to Banshee Media Player.

	* src/Core/Banshee.Services/Banshee.Library/LibraryImportManager.cs: Add
	some more file extensions to the whitelist.

	* src/Core/Banshee.Services/Banshee.ServiceStack/Application.cs: Load
	smart playlists here just like we load playlists.

	* src/Core/Banshee.Services/Makefile.am: